my-app/src/pages/register/RegisterScreenStyle.css
.mainRegister {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.inputRowWithIcon {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-left: 4.7ch;
    padding-top: 2ch;
}

.inputRow {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 2ch;
}

.separator {
    background-color: black;
    width: 100%;
    height: 0.10vh;
    margin: 2ch 0;
    opacity: 0.2;
}

.pageTitle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.pageSubTitle {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 1.5ch;
}

.titleText {
    font-size: 22px;
    font-weight: bold;
    color: black;
}

.inputWithIcon {
    flex-direction: row;
    justify-content: center;
    display: flex;
}

.passwordVisibleIcon {
    padding-top: 1ch;
}

.inputWrapper {
    padding-left: 2ch;
    padding-right: 2ch;
}

